--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -107,7 +107,7 @@
         <span class="header-links"><a href="index.html">About</a></span>
         <span class="header-links list-triangle"><a href="../events/index.html">Events</a>
           <ul>
-            <li><a href="../events/lummi-island/index.html">Lummi Island</a></li> <li><a href="../events/mendocino/index.html">Mendocino</a></li>
+            <li><a href="../events/patagonia/index.html">Patagonia</a></li> <li><a href="../events/lummi-island/index.html">Lummi Island</a></li>  <li><a href="../events/mendocino/index.html">Mendocino</a></li>
             <li><a href="../events/alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../events/climate/index.html">Climate</a></li>
             <li><a href="../events/mytinyatlaslondon/index.html">London</a></li>
@@ -147,15 +147,161 @@
                        <!-- CONTENT -->
                        <!-- INTERVIW -->
                        <div id="pg-interview">
-                       <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
+                         <div class="title-ill about-logo" style="margin: 0px auto 0px"><img src="images/MyTinyAtlas-3DBook.jpg" alt=""></div>
 
-                       <h2 class="with-ill">Remote</h2>
-                       <p>Arriving somewhere new and finding a geography completely unlike the one I grew up in always strikes me with joy. Give me headache-high mountains, a warm lagoon filled with sea turtles (and sharks!), a fir and cedar-filled terrain of pristine islets, bears wrestling berries off shrubs, 'ōhi'a trees soaking in rain from vog (volcanic fog),  or miles of shiny black lava, crunching as it cracks like a crusty snow beneath my sneakers. You name it. I’m immediately alive, present and awake to my surroundings.</p>
-                       <p>I was born and raised in the Midwest. Geographically speaking that meant I grew up in a land of green lawns and maple trees, an occasional hill and many lakes. There is a lot of beauty to be found in the Midwest but the landscape also left a lot to the imagination. As a kid I poured over my parents’ National Geographic magazines. I spent hours locating F9 or B24 in our oversized linen atlas and I would spin our globe and drag my fingertips over the paper mountains. Funny thing is, kids from all around the world, from Perth and the Alps, from Polynesia and Texas, Mongolia and Namibia witness their more dramatic landscapes and come up with the same urge. Well some kids, those like me and those like you. Maybe we all have what is sometimes referred to as a wanderlust gene, a risk-taking variant allele potentially linked to 20% of humanity’s collective love of travel.</p>
-                       <p>The places in this issue now rolling out are all out of reach for a quick getaway and we chose each of them just for that reason. Hawaii, Greenland, Tahiti, Tofino and more. They all require multiple forms of transportation to get to from most major cities. They take days to get into the rhythm of. And yet, all of these destinations are also home for the kids there- kids who are perhaps dreaming instead of the bustle of massive cities, of rolling plains that seem never ending, or even a simple train-networked university town. While this issue will share a number of places that are far from where many of us live, the idea of a remote destination to some extent will always be a construct. Ultimately, when we (at Tiny Atlas) say Remote, we mean a place far away from our own daily expectations.</p>
-                       <p>For the Tiny Atlas community, time on the road becomes time to explore and learn. Travel is how we meet new people, reconnect with our loved ones, discover new species and landscapes, try new foods and (for many of us) take lots of pictures.</p>
-                       <p>Thank you,<br />Emily Nathan <br />Founder + Publisher<br /> Tiny Atlas Quarterly</p>
-                       <p class="italics">Image by: Andrew Kearns</p>
+                       <h2 class="with-ill">My Tiny Atlas</h2>
+                       <h3>Our world through your eyes</h3>
+
+                       <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.</p>
+                       <p>As much an armchair travel companion as a guide to planning your next trip, My Tiny Atlas contains over 200 lush, surprising, and stunning photos, along with stories about far-flung locales and tips for experiencing a new location like a local. From Tiny Atlas Quarterly--one of the most trusted sources for authentic, unusual, and inspiring travel photography--this book takes you to every continent and all corners of the world, from Paris, San Francisco, London, and Buenos Aires to the Arctic Circle, Tanzania, Tahiti, and Mongolia. My Tiny Atlas visually explores new destinations with an intimate, insider's view--not of the usual monuments and tourist attractions, but of the real people, mouth-watering food, verdant flora, bustling streets, wild animals, epic views, lazy rivers, architectural gems, and other details that make you feel what it's like to truly be in another place, whether or not you ever leave home.</p>
+
+
+                       <p class="italics"> Author: Emily Nathan<br/>
+                         Publication date: 3/26/2019</p>
+
+                      <p> Available for preorder now.<br/>
+                        Domestic: <a href="http://bit.ly/tinyatlasbook">http://bit.ly/tinyatlasbook</a><br/>
+                        International: <a href="http://hyperurl.co/tinyatlas">http://hyperurl.co/tinyatlas</a> </p>
+                      <h3>Photography:</h3>
+                      <p> Adrienne Pitts                                           @hellopoe<br/>
+Alena Paramita                                        	@aparramitta<br/>
+Alex Abramowitz                                      	@instagramowitz
+Alexa Miller                                              	@alexaphoto
+Alexandra Kryaneva                                 @shurupchik
+Alice Gao                                                 	@alice_gao
+Allison McCarthy                                      	@aquinnm
+Ana Linares                                              @ananewyork
+Andrea Quiroz                                          	@neaqmol
+Andrew Kearns                                         @andrewtkearns
+Anita Brechbühl                                       	@travelita
+Anna Pihan                                      	@annapihan
+Annapurna Mellor                                    	@annapurnauna
+Anne Cui                                                  	@anneparavion
+Arielle Vey                                               	@ariellevey
+Aya Brackett                                             	@ayabrackett
+Ayako Bielsa                                             @_aya.lulu_
+Brian Flaherty                                           @brianflaherty
+Burcu Basar                                              @bizarrejourneys
+Cara Harman                                            @arrowsleadnowhere
+Cecile Moli                                              	@cecilemoli
+Chiara Zonca                                           	@shadowontherun
+Collin Erie                                                	@collinerie
+Conor MacNeill                                        	@thefella
+Corinne Rice                                            	@_nomadicmom
+Dagmara Chwalowska                             @dagmara_ch
+Dan Tom                                                  	@dantom
+Dani Soukup                                             @danisoukup
+ David Leøng				@d.leong
+ Davina Tan                                              	@heydavina
+Dawn Powell                                            	@dawnboas
+Dee Larsen                                               @dee_larsen
+Diane Tsai                                                	@dianetsai_
+Dirk Dallas                                                @dirka
+Elke Frotscher                                           @elice_f
+Elliot Vernon                                            	@elbow_macaroni
+Emily Blake                                              	@emilylaurenblake
+Emily Dulla                                      	 @emilydulla
+Emily Elyse Miller                                    	@emilyelysemiller
+Emily Katz                                                	@emily_katz
+Emily Nathan                                           	@ernathan
+Eric Flogny                                               	@ericflogny
+Erin Fong                                                 	@erinlovesfun
+Erin Kunkel                                               @erinkunkel
+Felix Sandmann                                       	@felixsnd
+Finn Beales                                              	@finn
+Gabriela Herman                                      @gab
+Gemma Cagnacci                                    	@lineshapecolour
+Giulia Dini                                                	@giuliadini
+Grant Harder                                             @grantharder
+Grant Legan                                             	@grantlegan
+Guerin Blask                                             @guerinblask
+Isabel Castillo Guijarro                    	@byisabel
+Ja Soon Kim                                            	@omjsk
+Jade Spadina Mackenzie                         	@jadespadina
+Jeff Bartlett                                               	@photojbartlett
+Jennifer Emerling                                     	@jemerling
+Jeralyn Gerba                                           @jgerba
+Jeremy Koreski                                         @jeremykoreski
+Jessica Bride                                            @belleannee
+Jessica Wright                                          	@bontraveler
+Jessie Brinkman Evans                             @jebrinks
+Jill Livingston                                           	@jlblivingston
+Jimmy Mezei                                            	@jimmymezei
+Joanna Yee                                              	@candidsbyjo
+Joe Greer                                                 	@ioegreer
+Joe Pickard                                              	@josephowen
+Jordan Dyck                                              @joordanrenee
+Jules Davies                                             @julesville_
+ Kaity Farrell				@fareisle
+ Kara Mercer                                             	@_karamercer
+Karen Doolittle                                         	@karendoolittle
+Kathy Zembera                                         @k_zembera
+Kenzie Benesh                                         	@kenziekirk
+Kevin Mao                                                	@k_mao
+Kim Goodwin                                   	@kim.goodwin
+Kylie Pan                                         	@kyliepan
+Laura Sausina                                          	@vagablonde_laura
+ Lavinia Cernău				@lavinia_cernau
+ Lisa Weatherbee                                      	@jungletimer
+Louise Coghill                                          	@louisetakesphotos
+Lucille Lawrence                                     	@lucillelawrence
+Lucy Rose Laucht                                    	@lucylaucht
+Madeline Lu                                             	@lumadeline
+ Magdalena Wosinska	                           @magdawosinskastudio
+Maleeha Sambur                                     	@challomallo
+Marianna Jamadi                                     	@nomadic_habit
+Marioly Vazquez                                      	@cestmaria
+Mateusz Cyrankiewicz                              @bootl
+Matthew Leonard                                     	@matthewleonard29
+Meagan Lindsey Bourne                          	@mlbourne
+Melissa Kaseman                                     @melissakasemanphoto
+Michael Goetze and Jampal Williamson 	@saltywings
+Michael Novotny                                      	@hazy_island
+Michael Sullivan                                      	@mistersullivan
+Michaela Trimble                                    	@michaelatrimble
+Michelle Solobay                                     	@michellesolobay
+Molly Margaret Meyer                              	@mollymrgrt
+Monia Hamdy                                           	@empiretraveler
+Morgan Ashley Johnson                           @morganashleyjo
+Morten Nordstrom                                     @mortenordstrom
+Natalia Horinkova                                      @_nata_
+Nazar Melconian                                      	@nazfilms
+Nels Evangelista                                       @nellee__
+Nico Oppel                                               	@eskimo
+Nicola Millbank                                        	@millycookbook
+Nicolee Drake                                           @cucinadigitale
+Patric Phillips                                           	@patricwithno_k
+Perry Graham                                           @perrygraham
+Peter Boman                                          @absinthemindedswede
+Ray Yun Gou                                            @rayraywanders
+Rhiannon Taylor                                      	@inbedwith.me
+Romana Lilic                                           	@romanalilic
+Sam Horine                                              	@samhorine
+Sammie Chan                                          	@sammiechn
+Sara Diamond                                          	@sara_diamond
+Sara Kerens                                          	@sarakerens
+ Sarah Murphy                                           @sarahirenemurphy
+Sezgi Olgac                                    	 @sezgiolgac
+Shannon Hammond                                 	@photobyshannon
+Shelly Strazis                                           	@shellystrazis
+Simone Bramante                                    	@brahmino
+ Sofia Tomé				@sofiatome
+ Sonya Khegay                                          @cupofherbaltea
+Stephanie Eburah                                    	@seburah
+Tara Hadipour                                          	@tarahadipour
+Taryn Kent                                               	@tarynkentphoto
+Thichakorn Plengpanich                          	@ms_plengpanich
+Tyson Wheatley                                        @twheat
+ Vaughn Wright				@vaughn.wright
+ Wynn Myers                                              @wynnmyers
+</p>
+<h3>Illustration:</h3>
+<p>Jimmy Mezei				@jimmymezei</p>
+<h3>Text and Resources special thanks to:</h3>
+<p>Summer Sewell<br/>
+Charlotte Boates<br/>
+Lindsey Adams<br/>
+Rachael Medina	</p>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
