--- a/new-site/2017-city.html
+++ b/new-site/2017-city.html
@@ -101,7 +101,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
             </div>
         </div>
 
