--- a/new-site/events/solas/index.html
+++ b/new-site/events/solas/index.html
@@ -50,7 +50,7 @@
 
     <span class="header-links list-triangle"><a href="../index.html">Events</a>
           <ul>
-            <li><a href="../lummi-island/index.html">Lummi Island</a></li> <li><a href="../mendocino/index.html">Mendocino</a></li>
+            <li><a href="../patagonia/index.html">Patagonia</a></li> <li><a href="../lummi-island/index.html">Lummi Island</a></li>  <li><a href="../mendocino/index.html">Mendocino</a></li>
             <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
             <li><a href="../climate/index.html">Climate</a></li>
             <li><a href="../mytinyatlaslondon/index.html">London</a></li>
@@ -60,7 +60,7 @@
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
+        <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
     </div>
 </div>
 
