--- a/new-site/index.html
+++ b/new-site/index.html
@@ -91,7 +91,9 @@
 
             <span class="header-links list-triangle"><a href="events/index.html">Events</a>
                   <ul>
-                    <li><a href="events/lummi-island/index.html">Lummi Island</a></li> <li><a href="events/mendocino/index.html">Mendocino</a></li>
+                    <li><a href="events/patagonia/index.html">Patagonia</a></li>
+                    <li><a href="events/lummi-island/index.html">Lummi Island</a></li>
+                    <li><a href="events/mendocino/index.html">Mendocino</a></li>
                     <li><a href="events/alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="events/climate/index.html">Climate</a></li>
                     <li><a href="events/mytinyatlaslondon/index.html">London</a></li>
@@ -101,7 +103,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
             </div>
         </div>
 
