--- a/new-site/index.html
+++ b/new-site/index.html
@@ -103,7 +103,7 @@
                   </ul>
                 </span>
 
-                <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
+                <span class="header-links"><a href="about/book.html">Book</a></span>
             </div>
         </div>
 
