--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -151,15 +151,14 @@
             <!-- IMAGE START -->
             <picture>
                 <!--[if IE 9]><video style="display: none;"><![endif]-->
-                <source srcset="images/2018-Editors-Letter-AndrewKearns-L.jpg" media="(min-width: 960px)">
-                <source srcset="images/2018-Editors-Letter-AndrewKearns-M.jpg" media="(min-width: 768px)">
+                <source srcset="images/book-bg.png" media="(min-width: 960px)">
+                <source srcset="images/book-bg.png" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/2018-Editors-Letter-AndrewKearns-S.jpg" alt="Tiny Atlas Quarterly, Oahu, Emily Nathan">
+                <img srcset="images/MyTinyAtlas-3DBook.jpg" alt="Tiny Atlas Quarterly, Oahu, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
 
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light" style="left: calc(70vw - 300px);
-    width: 600px;">
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
 
                 <!-- CAPTION -->
                 <!-- LEFT CAPTION -->
@@ -167,14 +166,10 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill about-logo" style="margin: 0px auto 0px"><img src="images/MyTinyAtlas-3DBook.jpg" alt=""></div>
 
-                        <h2 class="with-ill">My Tiny Atlas</h2>
-                        <h3>Our world through your eyes</h3>
+                        <h2 class="with-ill">My Tiny Atlas:<br/> Our World Through Your Eyes</h2>
 
-                        <p><strong>We invite you to explore our first book!</strong></p>
-
-                        <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.We invite you to explore our first book!</p>
+                        <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.</p>
                         <p>As much an armchair travel companion as a guide to planning your next trip, My Tiny Atlas contains over 200 lush, surprising, and stunning photos from more than 130 photographers, along with stories about far-flung locales and tips for experiencing a new location like a local. Our book takes you to every continent and all corners of the world, from Paris, San Francisco, London, and Buenos Aires to the Arctic Circle, Tanzania, Tahiti, and Mongolia. My Tiny Atlas visually explores new destinations with an intimate, insider's view--not of the usual monuments and tourist attractions, but of the real people, mouth-watering food, verdant flora, bustling streets, wild animals, epic views, lazy rivers, architectural gems, and other details that make you feel what it's like to truly be in another place, whether or not you ever leave home.</p>
 
 
@@ -308,7 +303,7 @@
                                 <li>Sara Diamond <a href="https://www.instagram.com/sara_diamond">@sara_diamond</a></li>
                                 <li>Sara Kerens <a href="https://www.instagram.com/sarakerens">@sarakerens</a></li>
                                 <li>Sarah Murphy <a href="https://www.instagram.com/sarahirenemurphy">@sarahirenemurphy</a></li>
-                                <li>Sezgi Olgac <a href="https://www.instagram.com/sezgiolgac">@sezgiolgac</a></li>
+                                <li>S. Sezgi Olgac <a href="https://www.instagram.com/sezgiolgac">@sezgiolgac</a></li>
                                 <li>Shannon Hammond <a href="https://www.instagram.com/photobyshannon">@photobyshannon</a></li>
                                 <li>Shelly Strazis <a href="https://www.instagram.com/shellystrazis">@shellystrazis</a></li>
                                 <li>Simone Bramante <a href="https://www.instagram.com/brahmino">@brahmino</a></li>
@@ -316,7 +311,7 @@
                                 <li>Sonya Khegay <a href="https://www.instagram.com/cupofherbaltea">@cupofherbaltea</a></li>
                                 <li>Stephanie Eburah <a href="https://www.instagram.com/seburah">@seburah</a></li>
                                 <li>Tara Hadipour <a href="https://www.instagram.com/tarahadipour">@tarahadipour</a></li>
-                                <li>Taryn Kent <a href="https://www.instagram.com/tarynkentphoto">@tarynkentphoto</a></li>
+                                <li>Taryn Kent Jenkinson<a href="https://www.instagram.com/tarynkentphoto">@tarynkentphoto</a></li>
                                 <li>Thichakorn Plengpanich <a href="https://www.instagram.com/ms_plengpanich">@ms_plengpanich</a></li>
                                 <li>Tyson Wheatley <a href="https://www.instagram.com/twheat">@twheat</a></li>
                                 <li>Vaughn Wright <a href="https://www.instagram.com/vaughn.wright">@vaughn.wright</a></li>
@@ -326,7 +321,7 @@
                         <h3>Illustration:</h3>
                         <p>Jimmy Mezei <a href="https://www.instagram.com/jimmymezei">@jimmymezei</a></p>
                         <h3>Text and Resources special thanks to:</h3>
-                        <p>Summer Sewell<br/> Charlotte Boates<br/> Lindsey Adams<br/> Rachael Medina<br / >Alexia Delgado</p>
+                        <p>Summer Sewell<br/> Charlotte Boates<br/> Lindsey Shea<br/> Rachael Medina<br / >Alexia Delgado</p>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
