--- a/new-site/about/stockists.html
+++ b/new-site/about/stockists.html
@@ -117,7 +117,7 @@
           </ul>
         </span>
 
-        <span class="header-links"><a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag" target="_blank">Shop</a>
+        <span class="header-links"><a href="book.html">Book</a></span>
         </span>
       </div>
   </div>
