--- a/new-site/events/lummi-island/index.html
+++ b/new-site/events/lummi-island/index.html
@@ -65,7 +65,7 @@
                   </ul>
                 </span>
 
-            <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
+            <span class="header-links"><a href="../../about/book.html">Book</a></span>
         </div>
     </div>
 
