--- a/new-site/events/mendocino/index.html
+++ b/new-site/events/mendocino/index.html
@@ -54,7 +54,7 @@
 
             <span class="header-links list-triangle"><a href="../index.html">Events</a>
                   <ul>
-                    <li><a href="../patagonia/index.html">Patagonia</a></li> <li><a href="../lummi-island/index.html">Lummi Island</a></li> 
+                    <li><a href="../patagonia/index.html">Patagonia</a></li> <li><a href="../lummi-island/index.html">Lummi Island</a></li>
                     <li><a href="index.html" class="link-active">Mendocino</a></li>
                     <li><a href="../alohilani-giveaway/index.html">Alohilani</a></li>
                     <li><a href="../climate/index.html">Climate</a></li>
@@ -65,7 +65,7 @@
                   </ul>
                 </span>
 
-            <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
+            <span class="header-links"><a href="../../about/book.html">Book</a></span>
         </div>
     </div>
 
