--- a/new-site/events/montauk/index.html
+++ b/new-site/events/montauk/index.html
@@ -774,7 +774,7 @@ $(function() {
           </ul>
         </span>
 
-        <span class="header-links"><a href="http://bit.ly/tinyatlasbook" target="_blank">Book</a></span>
+        <span class="header-links"><a href="../../about/book.html">Book</a></span>
     </div>
 </div>
 
