--- a/new-site/index.html
+++ b/new-site/index.html
@@ -215,12 +215,11 @@
 
         <div class="section">
           <div class="section-shop">
-            <img src="images/solas-image-1.png" alt="Solas Bag Image" class="lazy">
+            <img src="about/images/MyTinyAtlas-3DBook.jpg" alt="Solas Bag Image" class="lazy">
             <div class="shop-info">
-              <img src="images/solas-logo.png" alt="Solas Logo" class="logo">
-              <h3>A casual camera bag for  photographers</h3>
-              <p>A lightweight, versatile and durable camera bag Tiny Atlas Quarterly + Alite Designs made just for you.</p>
-              <a href="https://alitedesigns.com/collections/tiny-atlas-quarterly-solas-camera-bag"><button>Buy</button></a>
+              <h3>My Tiny Atlas:<br />Our World Through Your Eyes</h3>
+              <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places.</p>
+              <a href="http://bit.ly/tinyatlasbook"><button>Pre-Order</button></a>
             </div>
           </div>
 
