--- a/new-site/about/2017-masthead.html
+++ b/new-site/about/2017-masthead.html
@@ -205,9 +205,10 @@
                        <p><a href="https://www.linkedin.com/in/francisca-rojas-043893/">Francisca Rojas</a><br>
                        <a href="http://www.emilyknathan.com">Emily K Nathan</a><br>
                        <a href="http://www.bicoastalista.com/">Flora Tsapovsky</a></p>
-                       <h3>PRESS INQUIRIES &amp; AD SALES</h3>
-                       <p><a href="mailto:hello@ohanacommunications.com?Subject=Tiny%20Atlas%20Quarterly">Mr. Robbie Woodward or Ms. Flora Bertetti
-                       <br/>at Ohana Communications</a></p>
+                       <h3>MARKETING PARTNERSHIPS &amp; OPPORTUNITIES</h3>
+                       <p><a href="mailto:Eleanor.Thacher@tenspeed.com?Subject=Tiny%20Atlas%20Quarterly">Eleanor Thacher</a></p>
+                       <h3>PRESS &amp; EVENT REQUESTS</h3>
+                       <p><a href="mailto:Natalie.Mulford@tenspeed.com?Subject=Tiny%20Atlas%20Quarterly">Natalie Mulford</a></p>
 
                        </div>
                   </div><!--END INTERVIEW -->
