--- a/new-site/about/book.html
+++ b/new-site/about/book.html
@@ -104,7 +104,12 @@
     </script>
     <noscript>
           <img height="1" width="1" src="https://www.facebook.com/tr?id=1763007330608074&ev=PageView&noscript=1"/>
-        </noscript>
+    </noscript>
+    <style media="screen">
+      .book-spread{
+        margin: 15px 0px;
+      }
+    </style>
     <!-- End Facebook Pixel Code -->
 
 </head>
@@ -167,7 +172,10 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
 
-                        <h2 class="with-ill">My Tiny Atlas:<br/> Our World Through Your Eyes</h2>
+                        <h2 class="with-ill"><span style="font-size:53px">My Tiny Atlas:</span><br/> Our World Through Your Eyes</h2>
+
+                        <p> Available for preorder now.<br/><a href="http://bit.ly/tinyatlasbook">Domestic Preorder </a><br/>
+                          <a href="http://hyperurl.co/tinyatlas">International Preoder</a> </p>
 
                         <p>A wanderlust-inspiring and transporting collection of photos from some of the world's most astounding places, organized thematically--vistas, sunrises and sunsets, city streets and urban life, tropical jungles, dramatic architectural facades, food stalls and restaurants, and more--from the premier online curator of travel photography.</p>
                         <p>As much an armchair travel companion as a guide to planning your next trip, My Tiny Atlas contains over 200 lush, surprising, and stunning photos from more than 130 photographers, along with stories about far-flung locales and tips for experiencing a new location like a local. Our book takes you to every continent and all corners of the world, from Paris, San Francisco, London, and Buenos Aires to the Arctic Circle, Tanzania, Tahiti, and Mongolia. My Tiny Atlas visually explores new destinations with an intimate, insider's view--not of the usual monuments and tourist attractions, but of the real people, mouth-watering food, verdant flora, bustling streets, wild animals, epic views, lazy rivers, architectural gems, and other details that make you feel what it's like to truly be in another place, whether or not you ever leave home.</p>
@@ -175,7 +183,8 @@
 
                         <p class="italics"> Author: Emily Nathan<br/> Publication date: 3/26/2019</p>
 
-                        <p> Available for preorder now.<br/> Domestic: <a href="http://bit.ly/tinyatlasbook">http://bit.ly/tinyatlasbook</a><br/> International: <a href="http://hyperurl.co/tinyatlas">http://hyperurl.co/tinyatlas</a> </p>
+                        <img src="images/book-spread1.jpg" alt="book spread" class="book-spread">
+
                         <h3>Photography:</h3>
                         <p>
                             <ul id="photographers">
@@ -196,6 +205,7 @@
                                 <li>Arielle Vey <a href="https://www.instagram.com/ariellevey">@ariellevey</a></li>
                                 <li>Aya Brackett <a href="https://www.instagram.com/ayabrackett">@ayabrackett</a></li>
                                 <li>Ayako Bielsa <a href="https://www.instagram.com/_aya.lulu_">@_aya.lulu_</a></li>
+                                <img src="images/book-spread2.jpg" alt="book spread" class="book-spread">
                                 <li>Brian Flaherty <a href="https://www.instagram.com/brianflaherty">@brianflaherty</a></li>
                                 <li>Burcu Basar <a href="https://www.instagram.com/bizarrejourneys">@bizarrejourneys</a></li>
                                 <li>Cara Harman <a href="https://www.instagram.com/arrowsleadnowhere">@arrowsleadnowhere</a></li>
@@ -224,6 +234,7 @@
                                 <li>Emily Nathan <a href="https://www.instagram.com/ernathan">@ernathan</a></li>
                                 <li>Eric Flogny <a href="https://www.instagram.com/ericflogny">@ericflogny</a></li>
                                 <li>Erin Fong <a href="https://www.instagram.com/erinlovesfun">@erinlovesfun</a></li>
+                                <img src="images/book-spread3.jpg" alt="book spread" class="book-spread">
                                 <li>Erin Kunkel <a href="https://www.instagram.com/erinkunkel">@erinkunkel</a></li>
                                 <li>Felix Sandmann <a href="https://www.instagram.com/felixsnd">@felixsnd</a></li>
                                 <li>Finn Beales <a href="https://www.instagram.com/finn">@finn</a></li>
@@ -322,6 +333,10 @@
                         <p>Jimmy Mezei <a href="https://www.instagram.com/jimmymezei">@jimmymezei</a></p>
                         <h3>Text and Resources special thanks to:</h3>
                         <p>Summer Sewell<br/> Charlotte Boates<br/> Lindsey Shea<br/> Rachael Medina<br / >Alexia Delgado</p>
+
+                        <img src="images/book-spread4.jpg" alt="book spread" class="book-spread">
+                        <img src="images/book-spread5.jpg" alt="book spread" class="book-spread">
+                        <img src="images/book-spread6.jpg" alt="book spread" class="book-spread">
                     </div>
                 </div>
                 <!--END INTERVIEW -->
